Java 21 focused refactoring and general cleanup